--- a/app/views/staticpages/top.html.erb
+++ b/app/views/staticpages/top.html.erb
@@ -1,2 +1,5 @@
-<h1>Staticpages#top</h1>
-<p>Find me in app/views/staticpages/top.html.erb</p>
+
+<div class="top">
+    <h1>Staticpages#top</h1>
+    <p>topページテスト</p>
+</div>
