--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,26 @@
   </head>
 
   <body>
+    <div  class="header">
+      <%= render 'shared/header' %> 
+    </div>
+
     <div class="container">
-    <%= render 'shared/menubar'%>
-        <div>
-          <%= render 'shared/header' %>
+      <div>
+        <div  class="menubar">
+          <%= render 'shared/menubar'%>
+        </div>
+
+        <div class="main">
           <%= yield %>
+        </div>
+
+        <div class="footer">
           <%= render 'shared/footer' %>
         </div>
+      </div>
     </div>
+
   </body>
+
 </html>
