viewのレイアウトを整えました

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,7 @@
 <footer>
-    <div >
-        <p>フッターテスト</p>
-    </div>
+    <ul class ="footer-list">
+        <li class="li-margin-left">プライバシーポリシー</li>
+        <li class="li-margin-left">お問い合わせページ</li>
+        <li class="li-margin-left">利用規約</li>
+    <ul>
 </footer>
