--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,6 @@
 <header>
-    <div>
-        <p>ヘッダーテスト</p>
-    </div>
+    <ul class="space-between">
+        <li class="logo"><p>ロゴを配置</p></li>
+        <li class="login-link"><p>ログイン</p></li>
+    </ul>
 </header>
