--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -1,5 +1,13 @@
 <nav>
-    <div>
-        <p>メニューバーテスト</p>
-    </div>
+    <ul class="menu-list">
+        <li>
+            <%= link_to "トップ", root_path %>
+        </li>
+        <li class="li-margin">
+            <a>いいねを送る</a>
+        </li>
+        <li class="li-margin">
+            <%= link_to "New user", new_user_path %>
+        </li>
+    </ul>
 </nav>
