--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,5 @@
 <footer>
-    <ul class ="footer-list">
-        <li class="li-margin-left">プライバシーポリシー</li>
-        <li class="li-margin-left">お問い合わせページ</li>
-        <li class="li-margin-left">利用規約</li>
-    <ul>
+    <div >
+        <p>フッターテスト</p>
+    </div>
 </footer>
