--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,5 @@
 <header>
-    <ul class="space-between">
-        <li class="logo"><p>ロゴを配置</p></li>
-        <li class="login-link"><p>ログイン</p></li>
-    </ul>
+    <div>
+        <p>ヘッダーテスト</p>
+    </div>
 </header>
