--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,21 +1,26 @@
 <header>
-    <ul class="space-between">
+    <ul class = "space-between">
         <li class="logo"><p>ロゴを配置</p></li>
+        <!--
         <li class="login-link"><p>ログイン</p></li>
-
-        <% if user_signed_in? %>
-            <li>
-                <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }  %>
-            </li>
+        -->
+        <div class = "container">
+            <% if user_signed_in? %>
+                <li class = "li-margin-left">
+                    <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }  %>
+                </li>
             <% else %>
-            <li>
-                <%= link_to "新規登録", new_user_registration_path %>
-            </li>
-            <li>
+                <li class = "li-margin-left">
+                    <%= button_to "新規登録", new_user_registration_path %>
+                </li>
+                <li class = "li-margin-left">
+                <!--
                 <%= link_to "ログイン", new_user_session_path %>
-                <%= button_to "Sign in with twitter", user_twitter_omniauth_authorize_path, data: { turbo: false } %>
-            </li>
-        <% end %>
+                -->
+                    <%= button_to "ログイン", user_twitter_omniauth_authorize_path, data: { turbo: false } %>
+                </li>
+            <% end %>
+        </div>
     </ul>
 
 </header>
