--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,8 +12,10 @@
                 <%= link_to "新規登録", new_user_registration_path %>
             </li>
             <li>
+            <!--
                 <%= link_to "ログイン", new_user_session_path %>
-                <%= button_to "Sign in with twitter", user_twitter_omniauth_authorize_path, data: { turbo: false } %>
+            -->
+                <%= button_to "ログイン", user_twitter_omniauth_authorize_path, data: { turbo: false } %>
             </li>
         <% end %>
     </ul>
