--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,15 +7,15 @@
             <li>
                 <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }  %>
             </li>
-            <% else %>
+        <% else %>
+                    <!--
             <li>
-                <%= link_to "新規登録", new_user_registration_path %>
+                <%= button_to "新規登録", new_user_registration_path, data: { turbo: false }  %>
             </li>
-            <li>
-            <!--
                 <%= link_to "ログイン", new_user_session_path %>
             -->
-                <%= button_to "ログイン", user_twitter_omniauth_authorize_path, data: { turbo: false } %>
+             <li>
+                <%= button_to "ログイン", user_twitter2_omniauth_authorize_path, data: { turbo: false } %>
             </li>
         <% end %>
     </ul>
