--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,10 +5,11 @@
 
         <% if user_signed_in? %>
             <li>
+           <!-- destroy_user_session_path は devise のルーティングで定義されている -->
                 <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }  %>
             </li>
         <% else %>
-                    <!--
+        <!--
             <li>
                 <%= button_to "新規登録", new_user_registration_path, data: { turbo: false }  %>
             </li>
