いいねボタンの実装Try

--- a/app/views/staticpages/top.html.erb
+++ b/app/views/staticpages/top.html.erb
@@ -1,6 +1,13 @@
 
 <div>
-<!--    <h1>Staticpages#top</h1> -->
+<!--  <h1>Staticpages#top</h1> -->
+<!--current_userの情報を表示するコード
+<% if user_signed_in? %>
+  <p>Current User: <%= current_user.name %> (<%= current_user.email %>)</p>
+<% else %>
+  <p>No user is signed in.</p>
+<% end %>
+-->
     <h1>ユーザーIDの確認フォーム</h1>
     <%= form_with(url: '/staticpages/get_user_id', method: :get, local: true) do |form| %>
         <p>usernameの欄にTwitterの@マーク以降の文字列を入力してください</p>
@@ -29,11 +36,13 @@
           <% tweet_obj = Tweet.find_by(twitter_tweet_id: tweet["twitter_tweet_id"]) %>
           <!--tweet_objにデータが存在する場合-->
           <% if tweet_obj.present? %>
-          <!-- current_userのlikes関連付けを通じて、tweet_idがtweet_obj.idと一致する「いいね」が存在するかどうかをデータベースに問い合わせています。-->
-            <% if current_user.likes.exists?(tweet_id: tweet_obj.id) %>
-              <%= button_to 'いいね解除', unlike_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :delete, data: { confirm: 'このツイートのいいねを解除しますか？' } %>
-            <% else %>
-              <%= button_to 'いいね', like_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :post %>
+            <% if current_user.present? %>
+                <!-- current_userのlikes関連付けを通じて、tweet_idがtweet_obj.idと一致する「いいね」が存在するかどうかをデータベースに問い合わせ-->
+                <% if current_user.likes.exists?(tweet_id: tweet_obj.id) %>
+                  <%= button_to 'いいね解除', unlike_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :delete, data: { confirm: 'このツイートのいいねを解除しますか？' } %>
+                <% else %>
+                  <%= button_to 'いいね', like_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :post %>
+                <% end %>
             <% end %>
           <% else %>
             <p>このツイートはまだ保存されていません。</p>
