--- a/app/views/staticpages/top.html.erb
+++ b/app/views/staticpages/top.html.erb
@@ -28,16 +28,43 @@
   <!-- ツイートの表示 -->
   <% if @tweets.present? %>
     <h2>このユーザーの最新の10件のツイート</h2>
+    <%= form_with(url: likes_create_multiple_path, method: :post, local: true) do |form| %>
+      <ul class="tweet-lines">
+        <% @tweets.each do |tweet| %>
+          <li>
+            <%= check_box_tag 'tweet_ids[]', tweet.id, false %>
+            <%= tweet.text %><br>
+            <% tweet_obj = Tweet.find_by(twitter_tweet_id: tweet.id.to_s) %>
+            <% if tweet_obj.present? && current_user.present? %>
+              <% if current_user.likes.exists?(tweet_id: tweet_obj.id) %>
+                <%= button_to 'いいね解除', unlike_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :delete, data: { confirm: 'このツイートのいいねを解除しますか？' } %>
+              <% else %>
+                <%= button_to 'いいね', like_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :post %>
+              <% end %>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+      <%= form.submit "選択したツイートにいいね" %>
+    <% end %>
+  <% end %>
+</div>
+
+    <!--
     <ul class="tweet-lines">
       <% @tweets.each do |tweet| %>
         <li><%= tweet["text"] %><br>
         <%# tweet_obj = Tweet.find_by(twitter_tweet_id: tweet["id"]) %>
           <%# tweet_obj = Tweet.find_by(twitter_tweet_id: tweet["id"].to_s) %>
           <% tweet_obj = Tweet.find_by(twitter_tweet_id: tweet["twitter_tweet_id"]) %>
+          -->
           <!--tweet_objにデータが存在する場合-->
+          <!--
           <% if tweet_obj.present? %>
             <% if current_user.present? %>
+            -->
                 <!-- current_userのlikes関連付けを通じて、tweet_idがtweet_obj.idと一致する「いいね」が存在するかどうかをデータベースに問い合わせ-->
+                <!--
                 <% if current_user.likes.exists?(tweet_id: tweet_obj.id) %>
                   <%= button_to 'いいね解除', unlike_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :delete, data: { confirm: 'このツイートのいいねを解除しますか？' } %>
                 <% else %>
@@ -50,7 +77,7 @@
         </li>
       <% end %>
     </ul>
-  <% end %>
+-->
 
-</div>
+
 
