--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -3,11 +3,8 @@
         <li>
             <%= link_to "トップ", root_path %>
         </li>
-        <li class="li-margin">
-            <a>いいねを送る</a>
-        </li>
-        <li class="li-margin">
-            <%= link_to "New user", new_user_path %>
+        <li class="li-margin-top">
+            <a>その他実装中！</a>
         </li>
     </ul>
 </nav>
