--- a/app/views/staticpages/top.html.erb
+++ b/app/views/staticpages/top.html.erb
@@ -1,75 +1,38 @@
-
 <div>
 <!--  <h1>Staticpages#top</h1> -->
-<!--current_userの情報を表示するコード
-<% if user_signed_in? %>
-  <p>Current User: <%= current_user.name %> (<%= current_user.email %>)</p>
-<% else %>
-  <p>No user is signed in.</p>
-<% end %>
--->
     <h1>ユーザーIDの確認フォーム</h1>
     <%= form_with(url: '/staticpages/get_user_id', method: :get, local: true) do |form| %>
-        <p>usernameの欄にTwitterの@マーク以降の文字列を入力してください</p>
+        <p class="instruction">指定したユーザーの最新のツイートを5件取得して、一度にいいねを送ることができます</p>
+        <p class="instruction">Twitterのユーザーネーム（@マーク以降の文字列）を入力してツイートを取得するボタンをクリック！<br>ツイートが取得できたらまとめていいねボタンを押してね</p>
         <%= form.label :username, "Twitter Username" %>
-        <%= form.text_field :username %>
-        <%= form.submit "Get User ID" %>
+        <%= form.text_field :username, class: 'input-border', placeholder: "  hisaju01"   %>
+        <%= form.submit "ツイートを取得する", class: 'submit-button'  %>
     <% end %>
-
  <!--ユーザーIDの取得 -->
+ <!--
   <% if @error_message.present? %>
     <p><%= @error_message %></p>
   <% elsif @user_id.nil? %>
-    <p>ユーザーIDを取得してください。</p>
+    <p>ここにツイートが表示されます</p>
   <% else %>
     <p>取得したTwitterのユーザーIDは <%= @user_id %> です。</p>
   <% end %>
-
+  -->
   <!-- ツイートの表示 -->
   <% if @tweets.present? %>
-    <h2>このユーザーの最新の10件のツイート</h2>
-    <%= form_with(url: likes_create_multiple_path, method: :post, local: true) do |form| %>
-      <ul class="tweet-lines">
-        <% @tweets.each do |tweet| %>
-          <li>
-            <%= check_box_tag 'tweet_ids[]', tweet.id, false %>
-            <%= tweet.text %><br>
-            <% tweet_obj = Tweet.find_by(twitter_tweet_id: tweet.id.to_s) %>
-            <% if tweet_obj.present? && current_user.present? %>
-              <% if current_user.likes.exists?(tweet_id: tweet_obj.id) %>
-                <%= button_to 'いいね解除', unlike_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :delete, data: { confirm: 'このツイートのいいねを解除しますか？' } %>
-              <% else %>
-                <%= button_to 'いいね', like_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :post %>
-              <% end %>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
-      <%= form.submit "選択したツイートにいいね" %>
-    <% end %>
-  <% end %>
-</div>
-
-    <!--
+    <h2 class="li-margin-top">このユーザーの最新の5件のツイート</h2>
     <ul class="tweet-lines">
       <% @tweets.each do |tweet| %>
         <li><%= tweet["text"] %><br>
-        <%# tweet_obj = Tweet.find_by(twitter_tweet_id: tweet["id"]) %>
-          <%# tweet_obj = Tweet.find_by(twitter_tweet_id: tweet["id"].to_s) %>
           <% tweet_obj = Tweet.find_by(twitter_tweet_id: tweet["twitter_tweet_id"]) %>
-          -->
           <!--tweet_objにデータが存在する場合-->
-          <!--
           <% if tweet_obj.present? %>
             <% if current_user.present? %>
-            -->
-                <!-- current_userのlikes関連付けを通じて、tweet_idがtweet_obj.idと一致する「いいね」が存在するかどうかをデータベースに問い合わせ-->
-                <!--
-                <% if current_user.likes.exists?(tweet_id: tweet_obj.id) %>
-                  <%= button_to 'いいね解除', unlike_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :delete, data: { confirm: 'このツイートのいいねを解除しますか？' } %>
-                <% else %>
-                  <%= button_to 'いいね', like_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :post %>
-                <% end %>
+              <% if @liked_tweet_ids.include?(tweet["twitter_tweet_id"]) %>
+                <span>いいね済み</span>
+              <% else %>
+                <%= button_to 'いいね', like_tweet_path(tweet_id: tweet_obj.twitter_tweet_id), method: :post %>
+              <% end %>
             <% end %>
           <% else %>
             <p>このツイートはまだ保存されていません。</p>
@@ -77,7 +40,12 @@
         </li>
       <% end %>
     </ul>
--->
-
-
+    <% if @tweet_ids.present? %>
+      <%= form_with(url: like_multiple_tweets_path, method: :post, local: true) do |form| %>
+        <%= form.hidden_field :tweet_ids, value: @tweet_ids.join(' ')%>
+        <%= form.submit "まとめていいね", class: 'submit-button' %>
+      <% end %>
+    <% end %>
+  <% end %>
+</div>
 
